force-app/main/default/objects/Property_Details__c/Property_Details__c.object-meta.xml
<CustomObject>
    <label>Property Details</label>
    <nameField>
        <label>Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>