force-app/main/default/objects/Property_Details__c/fields/Constructed_Area__c.field-meta.xml
<CustomField>
    <fullName>Constructed_Area__c</fullName>
    <label>Constructed Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>