force-app/main/default/objects/Property_Details__c/fields/Exemption_Category__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Category__c</fullName>
    <label>Exemption Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>