force-app/main/default/objects/Property_Details__c/fields/Multipurpose_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Multipurpose_Ownership__c</fullName>
    <label>Multipurpose Ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>