force-app/main/default/objects/Property_Details__c/fields/Plot_Area_In_Sq_Mtrs__c.field-meta.xml
<CustomField>
    <fullName>Plot_Area_In_Sq_Mtrs__c</fullName>
    <label>Plot Area In Sq Mtrs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>