force-app/main/default/objects/Property_Details__c/fields/Registration_Doc_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Doc_Date__c</fullName>
    <label>Registration Doc Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>