force-app/main/default/objects/Property_Details__c/fields/Registration_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_Doc_No__c</fullName>
    <label>Registration Doc No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>