force-app/main/default/objects/Property_Details__c/fields/Vacant_Area_In_Sq_Yrd__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Area_In_Sq_Yrd__c</fullName>
    <label>Vacant Area In Sq Yrd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>